# pdf-to-presentation

./: .gitignore  README.md  main.py
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_main.http  theme_config.py
backend/src/pdf_to_presentation/: main.py
backend/tests/: test_main.http  test_main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: detail-level-selector.tsx  download-success.tsx  powerpoint-generator.tsx  processing-indicator.tsx  slide-editor.tsx  slide-image.tsx  slide-sidebar.tsx  theme-selector.tsx  upload-area.tsx
frontend/src/components/ui/: button.tsx
frontend/src/config/: themes.ts
frontend/src/lib/: pdf-processing.ts
frontend/src/types/: slide.ts  theme.ts
